<resources>
    <string name="app_name">To Do List</string>
    <string name="quick_task_hint">Enter Quick Task Here</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="new_task_name">What is to be done?</string>
    <string name="new_task_hint">Enter Task Here</string>
    <string name="due_date">Due date</string>
    <string name="new_date_hint">Date not set</string>
    <string name="new_time_hint">Time not set</string>
    <string name="add_task">Add Task</string>

    <string name="delete_task">Delete Task</string>
    <string name="title_activity_finished_tasks">Completed Tasks</string>
    <string name="title_activity_main">@string/app_name</string>

    <string name="task_alert">Enter a task name</string>
    <string name="task_finished_ques">Task finished?</string>
    <string name="task_finished_excl">Task finished!</string>

    <string name="no_tasks_todo">Add a task</string>
    <string name="no_finished_tasks">No completed tasks</string>

    <string name="overdue">Overdue</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="next_week">Next Week</string>
    <string name="this_month">This Month</string>
    <string name="next_month">Next Month</string>
    <string name="later">Later</string>
    <string name="no_date">No Due Date</string>

    <string name="task_completed">Task marked as completed</string>
    <string name="task_not_completed">Task moved to redo</string>
    <string name="task_deleted">Task Deleted</string>

    <string name="ignore_remainder">Ignore</string>
    <string name="task_done_remainder">Complete</string>
    <string name="action_settings">Settings</string>

    <string-array name="spinner_list_items">
        <item>To do</item>
        <item>Completed</item>
    </string-array>

    <string-array name="repeat_spinner_items">
        <item>No repeat</item>
        <item>Once a Day</item>
        <item>Once a Week</item>
        <item>Once a Month</item>
        <item>Once a Year</item>
    </string-array>

    <!-- Strings related to Preferences -->

    <string name="pref_title_alert">Alert Popup</string>
    <string name="pref_title_sounds">Sounds</string>

    <string name="pref_due_time_key">alarm_time</string>
    <string name="pref_due_time_12_hr">due_time_value</string>
    <string name="pref_due_hour_minute">due_hour_minute</string>
    <string name="pref_due_time_summary">Alert for tasks without due times will appear at </string>

    <string name="pref_enable_sound_key">enable_sound_key</string>
    <string name="pref_enable_sound_title">Enable sound for alert</string>

    <string name="pref_notification_sound_key">notification_sound_key</string>
    <string name="pref_notification_sound_title">Alert sound</string>
    <string name="pref_notification_sound_summary">Default sound</string>
    <string name="no_sound">None</string>

    <string name="pref_notification_vibrate_key">vibrate_notification</string>
    <string name="pref_notification_vibrate_title">Vibrate</string>
    <string name="pref_notification_vibrate_summary">Vibrate on alert</string>

    <string name="pref_alarm_duration_key">alarm_duration_key</string>
    <string name="pref_alarm_duration_dialog_message">alarm_duration_dialog_message</string>
    <string name="pref_alarm_duration_summary">2 Secs</string>
    <string name="pref_alarm_duration_unit">sec</string>
    <string name="pref_alarm_duration_title">Alarm buzz duration</string>

    <string name="pref_auto_snooze_key">pref_auto_snooze_key</string>
    <string name="pref_auto_snooze_summary">Snooze un-attended reminders!</string>
    <string name="pref_auto_snooze_title">Auto Snooze</string>

    <string name="pref_snooze_interval_key">pref_snooze_interval_key</string>
    <string name="pref_snooze_interval_summary">1 min</string>
    <string name="pref_snooze_interval_unit">min</string>
    <string name="pref_snooze_interval_title">Auto-snooze interval</string>

    <string name="pref_repeat_alert_tone_key">pref_repeat_alert_tone_key</string>
    <string name="pref_repeat_alert_tone_title">Repeat alert tone</string>

    <string name="paid">Paid</string>
    <string name="bold">bold</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="snooze">Snooze</string>

    <string name="dateAndTime">%1$s | %2$s</string>

    <string name="repeat">Repeat</string>

    <!-- Strings related to dialogs -->

    <string name="delete_alert">Are you sure to delete ?</string>
    <string name="no">No</string>
    <string name="ok">Yes</string>

    <string name="repeat_dialog_message">Repeat Task ?</string>
    <string name="repeat_dialog_title">Repeat Task ?</string>

    <string name="tap_to_view">Tap here to view</string>



    <!-- Strings related to plurals -->

    <plurals name="snoozeInterval">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

</resources>

