<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_new_task"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:focusableInTouchMode="true"
    tools:context="com.ms.favtodo.activity.NewTask"
    tools:showIn="@layout/activity_new_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_task_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_task_hint"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mark_as_done"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_finished"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_status"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/task_finished_ques"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:paddingTop="@dimen/activity_vertical_margin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_date_hint"
                android:backgroundTint="@color/colorPrimary"
                android:id="@+id/dateText"
                android:focusable="false"
                android:inputType="date"
                android:layout_weight="9"
                />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_clear_white_24dp"
                android:background="@drawable/round_button"
                android:padding="1dp"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:id="@+id/clear_date"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/timeLinearLayout"
            >

            <EditText
                android:id="@+id/timeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:backgroundTint="@color/colorPrimary"
                android:focusable="false"
                android:hint="@string/new_time_hint"
                android:inputType="time"
                />

            <ImageButton
                android:id="@+id/clear_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="0"
                android:background="@drawable/round_button"
                android:padding="1dp"
                android:src="@drawable/ic_clear_white_24dp"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/rl_sound_alert"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alert Notification"
                android:id="@+id/alert_label"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="8dp"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/enableSound_cb"
                android:layout_below="@+id/alert_label"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="Enable sound"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vibrate"
                android:id="@+id/enableVibrate_switch"
                android:layout_below="@id/alert_label"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:switchPadding="8dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/enableSound_cb"
                android:id="@+id/choose_alarm_sound"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:enabled="false"
                android:layout_marginTop="8dp"
                android:text="Change sound"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/layout_repeat"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/repeat"
                android:paddingBottom="8dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_repeat">

            </Spinner>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
